--- a/style.css
+++ b/style.css
@@ -46,7 +46,7 @@ main
     display: inline-block;
     vertical-align: top;
     box-sizing: border-box;
-    min-height: calc(300vh);
+    min-height: calc(160vh);
 }
 
 aside
@@ -87,4 +87,26 @@ main div p
 {
     color: black;
     font-weight: bolder;
+}
+footer{
+    display: flex;
+    height: 200px;
+    background-color: lightblue;
+    padding: 15px;
+    text-align: right;
+}
+footer div{
+    height: 50px;
+    width: 1300px;
+    padding: 50px 50px;
+}
+
+footer p a{
+    text-decoration: none;
+    color: black;
+}
+#zoeken{
+    border-radius: 4px;
+    border-color: gray;
+    background-color: lightblue;
 }
